<resources>
    <string name="app_name">AppModule</string>
    <string name="next">Next</string>
    <string name="mail">E-mail</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="profileTitle">Profile</string>
    <string name="pass">Password</string>
    <string name="user_info">Personal Info</string>
    <string name="update">Update</string>
    <string name="log">Log-In</string>
    <string name="forgotPass">Forgot your pasword?</string>
    <string name="newacc">Create new account</string>
    <string name="logout">LogOut</string>
    <string name="loading">Loading...</string>
</resources>
